--- a/web-app/public/pages/ViewChannel0.html
+++ b/web-app/public/pages/ViewChannel0.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
   <head>
     <!-- Se incluye la librería Chart.js para la creación de gráficos -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
@@ -13,8 +13,9 @@
         var myTime = 0;
         var myWishLengh = 50;
         var currLenght = 0;
+
         // Socket client y URL del servidor
-        var mySocket = new WebSocket("ws://localhost/wsNJS");
+        var mySocket = new WebSocket("ws://localhost:8080");
 
         // Eventos del socket
         mySocket.onopen = mySocketOpen;
@@ -22,23 +23,24 @@
 
         // Función de callback al abrir el socket
         function mySocketOpen() {
-          mySocket.send("D0");
+          mySocket.send("A0");
           setInterval(function () {
-            mySocket.send("D0");
+            mySocket.send("A0");
           }, 1000);
         }
 
         // Función de callback al recibir datos del socket
         function mySocketShowData(result) {
           try {
-            // Supongamos que result.data contiene un array de números
-            var valoresArray = JSON.parse(result.data);
-            console.log(valoresArray);
+            // Supongamos que result.data contiene un objeto
+            var obj = JSON.parse(result.data);
+            var valoresArray = obj.valores;
+            var myTime = obj.tiempos;                
+            console.log("socketData: " + JSON.stringify(obj));
             // Agregar datos a las variables de tiempo y valores
             for (var i = 0; i < valoresArray.length; i++) {
               dato_Value.push(valoresArray[i]);
-              va_Time.push(myTime);
-              myTime += 1;
+              va_Time.push(myTime[i]);
             }
 
             // Ajustar la longitud de los datos si es necesario
@@ -69,7 +71,7 @@
             datasets: [
               {
                 data: [],
-                label: "D0",
+                label: "A0",
                 borderColor: "#8bc34a",
                 fill: false,
               },
@@ -78,7 +80,7 @@
           options: {
             title: {
               display: true,
-              text: "Estado del Canal Digital 0 Vs. Tiempo",
+              text: "Valor del Canal 0 Vs. Tiempo",
               fontColor: "#ffffff", // Color del texto del título del gráfico
             },
             scales: {
@@ -99,7 +101,7 @@
             },
           },
         });
-        // Función para agregar datos al gráfico
+
         function plottingData(varTime, varData) {
           try {
             // Asegurarse de que varTime y varData tengan la misma longitud
@@ -135,48 +137,15 @@
       });
     </script>
     <meta charset="utf-8" />
-    <title>Entrada Digital D0</title>
-    <style>
-      body {
-        text-align: center;
-        font-family: Arial, sans-serif;
-        background-color: #f65454;
-        margin: 0;
-        padding: 0;
-      }
-
-      h1 {
-        color: #ffffff;
-      }
-
-      .chart-container {
-        position: relative;
-        height: 40vh;
-        width: 80vw;
-        margin: auto;
-        margin-top: 20px;
-      }
-
-      img {
-        position: absolute;
-        top: 0;
-        left: 0;
-        margin: 10px;
-        width: auto;
-        max-height: 80px;
-      }
-      /* Agregar reglas para el color del texto del gráfico */
-      #lineChart {
-        color: #6464ff; /* Color del texto del gráfico */
-      }
-    </style>
+    <title>Entrada Analógica A0</title>
+    <link rel="stylesheet" type="text/css" href="../styles/stylesView.css" />
   </head>
 
   <body>
     <!-- Imagen del logo -->
-    <img src="images/lampara_on.jpg" alt="Ejemplo de imagen" height="80" />
+    <img src="../images/logo.jpg" alt="Ejemplo de imagen" height="100" />
     <!-- Título de la página -->
-    <h1>Entrada Digital D0</h1>
+    <h1>Entrada Analógica A0</h1>
     <!-- Contenedor del gráfico -->
     <div class="chart-container">
       <canvas id="lineChart"></canvas>
