--- a/web-app/public/pages/ViewDigital1.html
+++ b/web-app/public/pages/ViewDigital1.html
@@ -15,7 +15,7 @@
         var currLenght = 0;
 
         // Socket client y URL del servidor
-        var mySocket = new WebSocket("ws://localhost/wsNJS");
+        var mySocket = new WebSocket("ws://localhost:8080");
 
         // Eventos del socket
         mySocket.onopen = mySocketOpen;
@@ -32,14 +32,15 @@
         // Función de callback al recibir datos del socket
         function mySocketShowData(result) {
           try {
-            // Supongamos que result.data contiene un array de números
-            var valoresArray = JSON.parse(result.data);
-            console.log(valoresArray);
+            // Supongamos que result.data contiene un objeto
+            var obj = JSON.parse(result.data);
+            var valoresArray = obj.valores;
+            var myTime = obj.tiempos;                
+            console.log("socketData: " + JSON.stringify(obj));
             // Agregar datos a las variables de tiempo y valores
             for (var i = 0; i < valoresArray.length; i++) {
               dato_Value.push(valoresArray[i]);
-              va_Time.push(myTime);
-              myTime += 1;
+              va_Time.push(myTime[i]);
             }
 
             // Ajustar la longitud de los datos si es necesario
@@ -138,45 +139,12 @@
     </script>
     <meta charset="utf-8" />
     <title>Entrada Digital D1</title>
-    <style>
-      body {
-        text-align: center;
-        font-family: Arial, sans-serif;
-        background-color: #f65454;
-        margin: 0;
-        padding: 0;
-      }
-
-      h1 {
-        color: #ffffff;
-      }
-
-      .chart-container {
-        position: relative;
-        height: 40vh;
-        width: 80vw;
-        margin: auto;
-        margin-top: 20px;
-      }
-
-      img {
-        position: absolute;
-        top: 0;
-        left: 0;
-        margin: 10px;
-        width: auto;
-        max-height: 80px;
-      }
-      /* Agregar reglas para el color del texto del gráfico */
-      #lineChart {
-        color: #6464ff; /* Color del texto del gráfico */
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="../styles/stylesView.css" />
   </head>
 
   <body>
     <!-- Imagen del logo -->
-    <img src="images/logo.jpg" alt="Ejemplo de imagen" height="80" />
+    <img src="../images/lampara_on.jpg" alt="Ejemplo de imagen" height="80" />
     <!-- Título de la página -->
     <h1>Entrada Digital D1</h1>
     <!-- Contenedor del gráfico -->
