--- a/web-app/public/pages/ToggleDigital1.html
+++ b/web-app/public/pages/ToggleDigital1.html
@@ -35,7 +35,7 @@
       // Tu JavaScript sigue aquí
       document.addEventListener("DOMContentLoaded", function () {
         // URL del socket para el cliente y el servidor
-        var mySocket = new WebSocket("ws://localhost:8080");
+        let mySocket = new WebSocket("ws://localhost:8080");
 
         // Variable para el estado de la lámpara (inicialmente apagada)
         var lamparaEncendida = false;
