--- a/web-app/public/pages/ToggleDigital0.html
+++ b/web-app/public/pages/ToggleDigital0.html
@@ -29,7 +29,7 @@
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         // URL del socket para el cliente y el servidor
-        var mySocket = new WebSocket("ws://localhost:8080");
+        let mySocket = new WebSocket("ws://localhost:8080");
 
         // Variable para el estado de la lámpara (inicialmente apagada)
         var lamparaEncendida = false;
